cmake_minimum_required(VERSION 3.4)
project(tutorialspoint_cpp_stl)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES src/main.cpp src/stl_iomanip.cpp src/stl_iomanip.cpp src/fstream_is_open.cpp src/fstream_open.cpp src/fstream_swap.cpp src/fstream_rdbuf.cpp)
add_executable(tutorialspoint_cpp_stl ${SOURCE_FILES})
add_executable(main src/main.cpp)
add_executable(array_at src/array_at.cpp)
add_executable(array_back src/array_back.cpp)
add_executable(iomanip1 src/stl_iomanip.cpp)
add_executable(stl_iomanip src/stl_iomanip.cpp)
add_executable(stl_fstream src/fstream_is_open.cpp)
add_executable(stl_fstream0 src/fstream_open.cpp)
add_executable(stl_fstream2 src/fstream_swap.cpp)
add_executable(stl_fstream3 src/fstream_rdbuf.cpp)